--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 :root {
     margin: 0;
     padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
@@ -16,13 +17,74 @@ body {
 }
 
 .toolbar {
-    background-color: #0b070769;
+    background-color: white;
     width: 30%;
-    max-width: 300px;
-    height: 90%;
+    max-width: 200px;
+    height: 50%;
     margin: auto 20px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.toolbar h2 {
+    color: black;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+.tool-button,
+.action-button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background-color: #F0F0F0;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 15px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    cursor: pointer;
+    width: 95%;
+    text-align: center;
+    font-size: 16px;
+}
+
+.tool-button:hover,
+.action-button:hover {
+    background-color: #DADADA;
+}
+
+/* Made the button blue */
+.tool-button.active {
+    background-color: #4A90E2;
+}
+
+.tool-button.active:hover {
+    background-color: #357ABD;
+}
+
+#color-picker {
+    width: 100%;
+    height: 40px;
+    border: none;
+    margin-top: -10px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+#brush-size {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+#clear-button:hover {
+    background-color: #f83029a1;
+    color: white;
 }
 
 .canvas-area {
